<resources>
  <string name="app_name">GrabLets</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>

  <string name="action_settings">Settings</string>
  <string name="my_orders">Moje narudžbe</string>
  <string name="my_restaurants">Moji restorani</string>
  <string name="news">Obavijesti</string>
  <string name="settings">Postavke</string>
  <string name="daily_menu">Ponuda dana</string>
  <string name="restaurant_list">Restorani</string>
  <string name="email_hint">Email adresa</string>
  <string name="password">Lozinka</string>
  <string name="login">Login</string>
  <string name="register_message">Nemate račun? <u>Registrirajte se.</u></string>
  <string name="registration">Registracija</string>
  <string name="user_first_name">Ime</string>
  <string name="user_last_name">Prezime</string>
  <string name="user_phone">Telefon</string>
  <string name="user_address">Adresa</string>
  <string name="user_additional_info">Napomena</string>
  <string name="register">Registriraj se!</string>
  <string name="user_delivery_time">Vrijeme dostave</string>
  <string name="notifications">Obavijesti</string>
  <string name="daily_menu_notification_message">Obavijesti me o dnevnom meniju</string>
  <string name="delivery_time_default_value">13:00</string>
  <string name="my_profile">Moj profil</string>
  <string name="update_user_data">Ažuriraj podatke</string>
  <string name="checkout_default_message">Košarica je prazna</string>
  <string name="checkout">Narudžba</string>
  <string name="ordering">Naručujem</string>
  <string name="delivery">Dostava</string>
  <string name="delivery_time">Vrijeme dostave</string>
  <string name="confirm_order">Naručujem</string>
  <string name="order_successful">Narudžba uspješno kreirana</string>
  <string name="total">Ukupno</string>
  <string name="security">Zaštita</string>
  <string name="security_pin_message">Podesi zaštitni pin</string>
  <string name="enter_security_pin">Unesite zaštitni pin</string>
  <string name="confirm_security_pin">Potvrdite zaštitni pin</string>
  <string name="pin_mismatch">Pinovi se ne poklapaju, pokušajte ponovno</string>
  <string name="pin_saved">Pin uspješno spremljen</string>
  <string name="save">Spremi</string>
  <string name="remove_pin">Ukloni pin</string>
  <string name="pin_removed">Zaštita pinom uklonjena</string>
  <string name="user_email">Email</string>
  <string name="user_password">Lozinka</string>
  <string name="user_home_address">Adresa kod kuće</string>
  <string name="user_work_address">Adresa na poslu</string>
  <string name="server_error_message">Greška na serveru, pokušajte ponovno kasnije</string>
  <string name="login_in_progress">Prijava u tijeku</string>
  <string name="please_wait">Molimo pričekajte</string>
  <string name="email_helper">Npr. ime.prezime@gmail.com</string>
  <string name="password_helper">Minimalno 4 znaka</string>

  <plurals name="basket_item_number">
    <item quantity="one">%d jelo u košarici</item>
    <item quantity="other">%d jela u košarici</item>
  </plurals>
</resources>
