<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/nav_daily_menu"
    android:icon="@drawable/ic_menu_share"
    android:title="@string/daily_menu"/>
  <item
    android:id="@+id/nav_restaurants"
    android:icon="@drawable/ic_menu_send"
    android:title="@string/restaurant_list"/>

  <item
    android:id="@+id/nav_my_orders"
    android:icon="@drawable/ic_menu_camera"
    android:title="@string/my_orders"/>
  <item
    android:id="@+id/nav_my_restaurants"
    android:icon="@drawable/ic_menu_gallery"
    android:title="@string/my_restaurants"/>
  <item
    android:id="@+id/nav_settings"
    android:icon="@drawable/ic_menu_manage"
    android:title="@string/settings"/>

  <item
    android:id="@+id/nav_logout"
    android:icon="@drawable/ic_menu_manage"
    android:title="@string/logout"/>


</menu>
