<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
    <LinearLayout
            android:id="@+id/login_view_anchor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

        <TextView
                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_default"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="48sp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/email_field"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor_black"
                app:met_helperText="@string/email_helper"
                app:met_baseColor="@android:color/black"
                app:met_floatingLabel="highlight"
                app:met_helperTextColor="@android:color/black"
                app:met_primaryColor="@android:color/black"/>

        <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password_field"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingTop="@dimen/padding_default"
                android:textCursorDrawable="@drawable/cursor_black"
                app:met_baseColor="@android:color/black"
                app:met_helperText="@string/password_helper"
                app:met_floatingLabel="highlight"
                app:met_helperTextColor="@android:color/black"
                app:met_primaryColor="@android:color/black"/>

        <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/login_margin"
                android:layout_marginRight="@dimen/login_margin"
                android:layout_marginTop="@dimen/padding_medium"
                android:padding="@dimen/padding_default"
                android:text="@string/login"/>

        <TextView
                android:id="@+id/register"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding_default"
                android:text="@string/register_message"
                android:textColor="@android:color/black"/>

    </LinearLayout>
</RelativeLayout>