<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_default">
    <TextView
      style="@style/CheckoutTitle"
      android:text="@string/ordering"/>
    <LinearLayout
      android:id="@+id/checkout_menu_container"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/padding_default"
      android:orientation="vertical">
    </LinearLayout>
    <TextView
      style="@style/CheckoutTitle"
      android:layout_marginTop="@dimen/padding_default"
      android:text="@string/delivery"/>
    <EditText
      android:id="@+id/checkout_delivery_address"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_default"
      android:layout_marginTop="@dimen/padding_default"
      android:theme="@style/CheckoutInput"/>
    <TextView
      style="@style/CheckoutTitle"
      android:layout_marginTop="@dimen/padding_default"
      android:text="@string/delivery_time"/>
    <EditText
      android:id="@+id/checkout_delivery_time"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/padding_default"
      android:layout_marginTop="@dimen/padding_default"
      android:theme="@style/CheckoutInput"/>
    <Button
      android:id="@+id/checkout_confirm_order"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/padding_default"
      android:padding="@dimen/padding_default"
      android:text="@string/confirm_order"/>
  </LinearLayout>
</ScrollView>