<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_background"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_email"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_email_label"
                    android:inputType="textEmailAddress"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_password"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_password_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_first_name"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_first_name_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_last_name"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_last_name_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_phone"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_phone_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_home_address"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_address_home_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_work_address"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_address_work_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_delivery_time"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_delivery_time_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/user_additional_info"
                android:textColorHint="@android:color/white"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/user_additional_info_label"
                    style="@style/RegistrationTextAppearance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:id="@+id/user_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>
    </LinearLayout>

</ScrollView>